typescript/checker/tests/conformance/scanner/ecmascript5/scannerS7.8.4_A7.1_T4.ts.stderr
error: Expected 4 hex characters
  --> $DIR/tests/conformance/scanner/ecmascript5/scannerS7.8.4_A7.1_T4.ts:13:2
   |
13 | "\u000G"
   |  ^^^^^

